log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:24:44 PM UTC: 
 tests:  0|6
total_score: 0/70
9304ed5
Thu 30 Mar 2023 03:37:07 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: void value not ignored as it ought to be
   15 |     if(lista == NULL) return exit(EXIT_FAILURE);
      |                              ^~~~~~~~~~~~~~~~~~
Compilation failed
6a1d89f
Thu 30 Mar 2023 03:37:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     if(lista == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
16f2374
Thu 30 Mar 2023 03:40:33 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     if(lista == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e65c308
